@@ -1,4 +1,6 @@
 2013-09-20 v3.03
+* Tesseract executable: support for output to stdout; limited support for one 
+  page images from stdin  (especially on Windows)
 * Added Renderer to API to allow document-level processing and output
   of document formats, like hOCR, PDF.
 * Major refactor of word-level recognition, beam search, eliminating dead code.
